manual/play1/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: play1
