manual/play1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test1
  name: test1
  namespace: play1
spec:
  containers:
    - image: nginx
      name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Always
